tests/ui/issues/issue-40861.stderr
error[E0608]: cannot index into a value of type `()`
  --> $DIR/issue-40861.rs:4:5
   |
LL |     ()[f(&[1.0])];
   |     ^^^^^^^^^^^^^
   |
   = help: to access tuple elements, use tuple indexing syntax (e.g., `tuple.0`)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0608`.
